.helm/templates/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-mongo-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: budget-mongo-deployment
  template:
    metadata:
      labels:
        app: budget-mongo-deployment
    spec:
      containers:
      - name: mongo
        image: mongo:7
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: data
          mountPath: /data/db
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: budget-mongo-pvc
