.helm/templates/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget-mongo-service
spec:
  selector:
    app: budget-mongo-deployment
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
