.helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget-app-service
spec:
  selector:
    app: budget-app-deployment
  ports:
  - name: http
    port: 80
    targetPort: 8080
