.helm/templates/spendpulse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spendpulse-service
spec:
  selector:
    app: spendpulse
  ports:
  - name: http
    port: 80
    targetPort: 8080
